# FloatingTodo

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  index.html  vercel.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: android-build.yml  windows-build.yml
Resources/: AppIcon.icns
apps/android/: README.md  capacitor.config.json  package.json
apps/chrome-extension/: README.md  build.sh  manifest.json  popup.html
apps/figma-plugin/: README.md  code.js  manifest.json  ui.html
apps/figma-widget/: README.md  code.js  manifest.json
apps/macos/: README.md  build.sh
apps/macos/Sources/: main.swift
apps/macos/tools/: make_icon.swift
apps/web/: README.md  index.html
apps/web/app/: app.css  core.js  index.html  manifest.webmanifest  sw.js  ui.js
apps/windows/: README.md  UPDATER.md
apps/windows/src-tauri/: Cargo.toml  tauri.conf.json
apps/windows/src-tauri/src/: main.rs
tools/: make_web_assets.swift
